--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#4598FF</color>
+    <color name="colorPrimaryDark">#4598FF</color>
+    <color name="colorAccent">#D81B60</color>
+
+    <color name="color_white">@android:color/white</color>
+    <color name="color_black">@android:color/black</color>
+
+    <color name="color_gary">#999999</color>
+
 </resources>
