--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,11 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <!--button bg common style-->
+    <style name="Common_Button_Style">
+        <item name="android:background">@drawable/shape_button_bg</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
 </resources>
